--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio Website</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="stylesheets/index.css">
 </head>
 
@@ -34,8 +35,8 @@
                 </div>
                 <div class="hero__text">
                     <h2>Hi!</h2>
-                    <h2>I'm John Doe</h2>
-                    <h2>Mobile and Web App </h2>
+                    <h2>I'm Martin Sorcezy Lucas</h2>
+                    <h2>Mobile and Website Applications Developer </h2>
 
                     <a href="#">View Resume</a>
                 </div>
@@ -45,7 +46,7 @@
             <h3 class="section-header">Stack</h3>
             <div class="card medium">
                 <h4 class="card-header">Development</h4>
-                <ul>
+                <ul class="stack__collection">
                     <li>Kotlin - Android</li>
                     <li>Flutter - Android</li>
                     <li>JavaScript - Vue</li>
@@ -55,7 +56,7 @@
             </div>
             <div class="card medium">
                 <h4 class="card-header">Deployment</h4>
-                <ul>
+                <ul class="stack__collection">
                     <li>AWS</li>
                     <li>Digital Ocean</li>
                     <li>Heroku</li>
