fix everything except footer

--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                 <div class="card square">
                     <h4 class="card-header">CONTACT INFO</h4>
                     <ul>
-                        <li>Accra, Ghana</li>
-                        <li>info@johndoe.com</li>
-                        <li>+233-000-000-0000</li>
+                        <li class="first">Accra, Ghana</li>
+                        <li class="second">info@johndoe.com</li>
+                        <li class="third">+233-000-000-0000</li>
                     </ul>
                 </div>
             </div>
