--- a/index.html
+++ b/index.html
@@ -127,9 +127,33 @@
     </section>
     <footer>
         <p>© Copyright 2019 | John Doe</p>
-        <div class="icons">
-            TOP
-        </div>
+        <ul class="icons">
+                <li>
+                    <a href="https://twitter.com/" target="_blank">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/" target="_blank">
+                        <i class="fa fa-github"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/" target="_blank">
+                        <i class="fa fa-linkedin"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://medium.com/@" target="_blank">
+                        <i class="fa fa-medium"></i>
+                    </a>
+                </li>
+                <li>
+                <a href="#">
+                        <i class="fa fa-envelope"></i>
+                </a>
+                </li>
+            </ul>
     </footer>
 </body>
 
