general ui fixes

--- a/index.html
+++ b/index.html
@@ -70,30 +70,25 @@
             <div class="row">
                 <div class="pf-card large first">
                     <h4 class="card-header">Project Title</h4>
-                    <p class="description">Long description here . Additional
-                        information is added here. </p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam aliquam. Vero reprehenderit sed dolore, recusandae odit ab soluta nemo  </p>
                 </div>
                 <div class="pf-card large second">
                     <h4 class="card-header">Project Title</h4>
-                    <p class="description">Long description here . Additional
-                        information is added here. </p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam aliquam. Vero reprehenderit sed dolore, recusandae odit ab soluta nemo  </p>
                 </div>
             </div>
             <div class="row">
                 <div class="pf-card small first">
                     <h4 class="card-header">Project Title</h4>
-                    <p class="description">Long description here . Additional
-                        information is added here.</p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam aliquam. Vero reprehenderit sed dolore, recusandae odit ab soluta nemo </p>
                 </div>
                 <div class="pf-card small second">
                     <h4 class="card-header">Project Title</h4>
-                    <p class="description">Long description here . Additional
-                        information is added here.</p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam aliquam. Vero reprehenderit sed dolore, recusandae odit ab soluta nemo </p>
                 </div>
                 <div class="pf-card small third">
                     <h4 class="card-header">Project Title</h4>
-                    <p class="description">Long description here . Additional
-                        information is added here.</p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam aliquam. Vero reprehenderit sed dolore, recusandae odit ab soluta nemo </p>
                 </div>
             </div>
         </section>
