update font and clean up tablet view

--- a/index.html
+++ b/index.html
@@ -70,25 +70,30 @@
             <div class="row">
                 <div class="pf-card large first">
                     <h4 class="card-header">Project Title</h4>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam aliquam. Vero reprehenderit sed dolore, recusandae odit ab soluta nemo  </p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam
+                        aliquam. Vero reprehenderit sed dolore, recusandae odit ab soluta nemo </p>
                 </div>
                 <div class="pf-card large second">
                     <h4 class="card-header">Project Title</h4>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam aliquam. Vero reprehenderit sed dolore, recusandae odit ab soluta nemo  </p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam
+                        aliquam. Vero reprehenderit sed dolore, recusandae odit ab soluta nemo </p>
                 </div>
             </div>
             <div class="row">
                 <div class="pf-card small first">
                     <h4 class="card-header">Project Title</h4>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam aliquam. Vero reprehenderit sed dolore, recusandae odit ab soluta nemo </p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam
+                        aliquam. Vero reprehenderit sed dolore, recusandae odit ab soluta nemo </p>
                 </div>
                 <div class="pf-card small second">
                     <h4 class="card-header">Project Title</h4>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam aliquam. Vero reprehenderit sed dolore, recusandae odit ab soluta nemo </p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam
+                        aliquam. Vero reprehenderit sed dolore, recusandae odit ab soluta nemo </p>
                 </div>
                 <div class="pf-card small third">
                     <h4 class="card-header">Project Title</h4>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam aliquam. Vero reprehenderit sed dolore, recusandae odit ab soluta nemo </p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam
+                        aliquam. Vero reprehenderit sed dolore, recusandae odit ab soluta nemo </p>
                 </div>
             </div>
         </section>
@@ -115,6 +120,7 @@
                         <li class="first">Accra, Ghana</li>
                         <li class="second">info@johndoe.com</li>
                         <li class="third">+233-000-000-0000</li>
+                        <li class="third">+233-111-111-1111</li>
                     </ul>
                 </div>
             </div>
@@ -123,32 +129,32 @@
     <footer>
         <p>© Copyright 2019 | John Doe</p>
         <ul class="icons">
-                <li>
-                    <a href="https://twitter.com/" target="_blank">
-                        <i class="fa fa-twitter"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://github.com/" target="_blank">
-                        <i class="fa fa-github"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/in/" target="_blank">
-                        <i class="fa fa-linkedin"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://medium.com/@" target="_blank">
-                        <i class="fa fa-medium"></i>
-                    </a>
-                </li>
-                <li>
-                <a href="#">
-                        <i class="fa fa-envelope"></i>
+            <li>
+                <a href="https://twitter.com/" target="_blank">
+                    <i class="fa fa-twitter"></i>
                 </a>
-                </li>
-            </ul>
+            </li>
+            <li>
+                <a href="https://bitbucket.com/" target="_blank">
+                    <i class="fa fa-bitbucket"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/" target="_blank">
+                    <i class="fa fa-github"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/" target="_blank">
+                    <i class="fa fa-linkedin"></i>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="fa fa-envelope"></i>
+                </a>
+            </li>
+        </ul>
     </footer>
 </body>
 
