--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio Website</title>
+    <title>Isaac's portfolio</title>
     <link rel="icon" href="images/logo.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="stylesheets/index.css">
@@ -21,9 +21,9 @@
         <nav class="navbar__wrapper">
             <ul class="navbar_list">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#stack_section">Skills</a></li>
+                <li><a href="#portfolio_section">Portfolio</a></li>
+                <li><a href="#contact_section">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -36,51 +36,47 @@
                 </div>
                 <div class="hero__text">
                     <h2>Hi!</h2>
-                    <h2>I'm Martin Sorcezy Lucas</h2>
-                    <h2>Mobile and Website Applications Developer </h2>
+                    <h2>I am Isaac Akwasi Oppong Jnr</h2>
+                    <h2>Mobile Applications Developer</h2>
 
                     <a href="#">View Resume</a>
                 </div>
             </div>
         </section>
-        <section class="stack">
+        <section id="stack_section" class="stack">
             <h3 class="section-header">Stack</h3>
             <div class="card medium">
                 <h4 class="card-header">Development</h4>
                 <ul class="stack__collection">
-                    <li>Kotlin - Android</li>
-                    <li>Flutter - Android</li>
-                    <li>JavaScript - Vue</li>
-                    <li>JavaScript - React</li>
-                    <li>Ruby - Rails</li>
+                    <li>Android - Kotlin</li>
+                    <li>Android - Java</li>
+                    <li>iOS - Swift</li>
+                    <li>Dart - Flutter</li>
                 </ul>
             </div>
             <div class="card medium">
                 <h4 class="card-header">Deployment</h4>
                 <ul class="stack__collection">
-                    <li>AWS</li>
-                    <li>Digital Ocean</li>
-                    <li>Heroku</li>
-                    <li>Bitbucket pipelines</li>
-                    <li>GitLab CI</li>
+                    <li>Codemagic</li>
+                    <li>Fastlane</li>
                 </ul>
             </div>
         </section>
-        <section class="portfolio">
+        <section id="portfolio_section" class="portfolio">
             <h3 class="section-header">Portfolio</h3>
             <div class="row">
                 <div class="pf-card large first">
-                    <h4 class="card-header">Project Title</h4>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam
-                        aliquam. Vero reprehenderit sed dolore, recusandae odit ab soluta nemo </p>
+                    <h4 class="card-header">Whoopro</h4>
+                    <p class="description"> Whoopro is a self-serviced digital advertising platform that connects brands with highly engaged 
+                        Whoopro presents the opportunity to monetise your influence as a social media influencer </p>
                 </div>
                 <div class="pf-card large second">
-                    <h4 class="card-header">Project Title</h4>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam
-                        aliquam. Vero reprehenderit sed dolore, recusandae odit ab soluta nemo </p>
+                    <h4 class="card-header">Handawt</h4>
+                    <p class="description">Handawt and it's associated UI have been carefully designed to deliver the best learning experience.
+                         By doing so, the app creates the right environment and sets the tone for effective learning at all times.</p>
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="pf-card small first">
                     <h4 class="card-header">Project Title</h4>
                     <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam
@@ -96,9 +92,9 @@
                     <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, numquam
                         aliquam. Vero reprehenderit sed dolore, recusandae odit ab soluta nemo </p>
                 </div>
-            </div>
+            </div> -->
         </section>
-        <section class="contact">
+        <section id="contact_section" class="contact">
             <h3 class="section-header">Contact</h3>
 
             <div class="row">
@@ -128,25 +124,15 @@
         </section>
     </section>
     <footer>
-        <p>© Copyright 2019 | John Doe</p>
+        <p>© Copyright 2021 | Isaac Akwasi Oppong Jnr</p>
         <ul class="icons">
             <li>
-                <a href="https://twitter.com/" target="_blank">
-                    <i class="fa fa-twitter"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://bitbucket.com/" target="_blank">
-                    <i class="fa fa-bitbucket"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://github.com/" target="_blank">
+                <a href="https://github.com/oppongjr" target="_blank">
                     <i class="fa fa-github"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/" target="_blank">
+                <a href="https://www.linkedin.com/in/oppongjr/" target="_blank">
                     <i class="fa fa-linkedin"></i>
                 </a>
             </li>
