--- a/index.html
+++ b/index.html
@@ -63,13 +63,15 @@
             </div>
         </section>
         <section id="portfolio_section" class="portfolio">
-            <h3 class="section-header">Portfolio</h3>
+            
+                <h3 class="section-header">Portfolio</h3>
             <div class="row">
-                <div class="pf-card large first">
+                <a href="www.twitter.com" target="_blank">
+                    <div class="pf-card large first">
                     <h4 class="card-header">Whoopro</h4>
                     <p class="description"> Whoopro is a self-serviced digital advertising platform that connects brands with highly engaged 
                         Whoopro presents the opportunity to monetise your influence as a social media influencer </p>
-                </div>
+                </div></a>
                 <div class="pf-card large second">
                     <h4 class="card-header">Handawt</h4>
                     <p class="description">Handawt and it's associated UI have been carefully designed to deliver the best learning experience.
