--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     <img class="__logo" src="images/pp.png" />
                 </div>
                 <div class="hero__text">
-                    <h2>Hi!</h2>
-                    <h2>I am Isaac Akwasi Oppong Jnr</h2>
+                    <!-- <h2>Hi!</h2> -->
+                    <h2>Isaac Akwasi Oppong Jnr</h2>
                     <h2>Mobile Applications Developer</h2>
 
                     <a href="#">View Resume</a>
@@ -66,16 +66,19 @@
             
                 <h3 class="section-header">Portfolio</h3>
             <div class="row">
-                <a href="www.twitter.com" target="_blank">
                     <div class="pf-card large first">
-                    <h4 class="card-header">Whoopro</h4>
-                    <p class="description"> Whoopro is a self-serviced digital advertising platform that connects brands with highly engaged 
-                        Whoopro presents the opportunity to monetise your influence as a social media influencer </p>
-                </div></a>
+                        <a href="https://play.google.com/store/apps/details?id=com.whoopro.android&hl=en&gl=US" target="_blank">
+                            <h4 class="card-header">Whoopro</h4>
+                            <p class="description"> Whoopro is a self-serviced digital advertising platform that connects brands with highly engaged 
+                            Whoopro presents the opportunity to monetise your influence as a social media influencer</p>
+                        </a>
+                </div>
                 <div class="pf-card large second">
-                    <h4 class="card-header">Handawt</h4>
-                    <p class="description">Handawt and it's associated UI have been carefully designed to deliver the best learning experience.
+                    <a href="https://play.google.com/store/apps/details?id=com.glivion.handawt&hl=en_SG" target="_blank">
+                        <h4 class="card-header">Handawt</h4>
+                        <p class="description">Handawt and it's associated UI have been carefully designed to deliver the best learning experience.
                          By doing so, the app creates the right environment and sets the tone for effective learning at all times.</p>
+                    </a>
                 </div>
             </div>
             <!-- <div class="row">
@@ -117,9 +120,8 @@
                     <h4 class="card-header">CONTACT INFO</h4>
                     <ul>
                         <li class="first">Accra, Ghana</li>
-                        <li class="second">info@johndoe.com</li>
-                        <li class="third">+233-000-000-0000</li>
-                        <li class="third">+233-111-111-1111</li>
+                        <li class="second">oppong751@gmail.com</li>
+                        <li class="third">+233-209-050-642</li>
                     </ul>
                 </div>
             </div>
